# pyworld3

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  wrangler.jsonc
.claude/: settings.local.json
.github/workflows/: ci.yml  container-smoke.yml  deploy-pages.yml  openapi-validate.yml  simulation-check.yml  ui-validate.yml
app/: .gitignore  404.html  api.py  cli.py  engine.py  index.html  llm.txt  models.py  package.json
app/css/: base.css  components.css  model.css
app/data/locales/: ar.json  bn.json  de.json  en.json  es.json  fa.json  fr.json  hi.json  hu.json  id.json  it.json  ja.json  nl.json  pl.json  pt-BR.json  pt-PT.json  ru.json  th.json  tr.json  uk.json  vi.json  zh-CN.json  zh-TW.json
app/developers/: index.html
app/js/: app.js  keyboard-nav.js  router.js  worker.js
app/static/: .gitignore  404.html  eslint.config.mjs  index.html  openapi.json  package.json  sitemap.xml  tsconfig.json  vitest.config.ts
app/static/css/: base.css  charts.css  components.css
app/static/data/: owid-world-data.json  standard-run-explore.json
app/static/js/: app.js  browser-native.js  (+8 more)
app/test/: charts.test.ts  check-locales.test.ts  worker-api.test.ts  world3-simulation.test.ts
app/ts/: charts.ts  i18n.ts  worker.ts
pyworld3/adapters/: api.py  cli.py
pyworld3/application/: container.py  simulate.py
scripts/: generate_ai_translations.py  sync-core.sh
tests/: conftest.py  test_api.py  test_app_api.py  test_app_cli.py  test_app_engine.py  test_owid.py  test_owid_calibration.py  test_owid_client.py  test_owid_indicators.py  test_owid_transforms.py  test_owid_validation.py  test_sectors.py  test_simulate.py
tests/e2e/: test_ui.py
worker/: index.ts
(+102 files in other folders)
